Fixes for some broken CSS styling.
- Reintroduce bootstrap-tokenfield. The bower package is not compatible with current versions of bootstrap, so I've included a tweaked version in the dir less/tokenfield
- Configure default navbar background colour. For some reason the live site had a white background, but the default was grey on dev.

--- a/web/app/themes/ccrc/assets/less/_variables.less
+++ b/web/app/themes/ccrc/assets/less/_variables.less
@@ -16,7 +16,11 @@
 @light-text-clr:		#fff;
 @meta-text-clr:			#aaa;
 @left-link-arrow:	#d7002c;
-		
+
+// Navbar
+// -------------------------
+@navbar-default-bg: #fff;
+
 
 // Font sizes
 // -------------------------
